--- a/prolog/README
+++ b/prolog/README
@@ -19,3 +19,6 @@ Tutorials
 User forums
 - http://www.swi-prolog.org/forum
 - https://stackoverflow.com/questions/2402101/prolog-open-source-community-code-repository-blogs-forums
+
+Fibonacci
+- http://www.cs.utexas.edu/~cannata/cs345/Class%20Notes/Prolog%20examples.pdf
